# qgis-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  package.sh  pyproject.toml  requirements.txt
.github/workflows/: code_style.yml  packages.yml  run-test.yml  security_check.yml
Mergin/: __init__.py  attachment_fields_model.py  browser_data_items.py  clone_project_dialog.py  collapsible_message_box.py  configuration_dialog.py  configure_sync_wizard.py  create_project_dialog.py  create_project_wizard.py  data_item.py  diff.py  diff_dialog.py  field_filtering.py  fixer.py  help.py  item.py  metadata.txt  monthly_contributors_error_dialog.py  plugin.py  project_dialog.py  project_history_dock.py  project_limit_hit_dialog.py  project_selection_dialog.py  project_settings_widget.py  project_status_dialog.py  projects_manager.py  qgis_properties_version_4.py  remove_project_dialog.py  repair.py  switch_sources_dialog.py  sync_dialog.py  utils.py  utils_auth.py  validation.py  version_details_dialog.py  version_viewer_dialog.py  workspace_selection_dialog.py
Mergin/client/: __init__.py  multipart.py  utils.py
Mergin/processing/: postprocessors.py  provider.py
Mergin/styles/: map_annotations_style.qml
Mergin/test/: suite.py  test_help.py  (+4 more)
docs/: dev-docs.md  user-docs.md
scripts/: check_all.bash  deploy_win.py  format_py.bash  install_dev_linux.sh  package.sh  update_version.bash  update_version.py
tests/: conftest.py  test_field_filtering.py  test_help.py  test_packaging.py  test_qgis_properties_version_4.py  test_utils.py  test_validations.py
(+37 files in other folders)
