[project]
name = "Mergin"
requires-python = ">=3.9"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-qgis"]

[tool.pytest.ini_options]
addopts = "-rP -vv -s"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 120

[tool.isort]
atomic = true
profile = "black"
line_length = 120
